--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 3,
   "name": "Lasso Demo Extension",
   "version": "0.1.0",
-  "description": "intercept fetch requests and anonymize email addresses",
+  "description": "intercept fetch requests and anonymize email addresses on specific domains",
   "action": {
     "default_popup": "src/popup/index.html",
     "default_title": "Lasso Demo"
@@ -17,22 +17,35 @@
   },
   "content_scripts": [
     {
-      "matches": ["<all_urls>"],
+      "matches": [
+        "*://chatgpt.com/*",
+        "*://*.chatgpt.com/*",
+        "*://openai.com/*",
+        "*://*.openai.com/*"
+      ],
       "js": ["src/content/content.ts"],
       "run_at": "document_idle"
     },
     {
-      "matches": ["*://chatgpt.com/*"],
+      "matches": ["*://chatgpt.com/*", "*://*.chatgpt.com/*"],
       "js": ["src/content/intercept-fetch.ts"],
       "run_at": "document_start"
     }
   ],
   
-  "permissions": ["storage", "tabs", "activeTab", "scripting"],
-  "host_permissions": ["<all_urls>"],
+  "permissions": ["storage"],
+  "host_permissions": [
+    "*://chatgpt.com/*",
+    "*://*.chatgpt.com/*",
+    "*://openai.com/*",
+    "*://*.openai.com/*"
+  ],
   "web_accessible_resources": [
     {
-      "matches": ["<all_urls>"],
+      "matches": [
+        "*://chatgpt.com/*",
+        "*://*.chatgpt.com/*"
+      ],
       "resources": ["injected-script.js", "src/injected-script.ts"]
     }
   ]
